[project]
name = "piepdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "habanero>=2.0.0",
    "pyqt5>=5.15.11",
    "pyqt5-sip>=12.16.0",
    "pyqtwebengine>=5.15.7",
    # "python-poppler-qt5>=21.3.0",
    "sip>=6.9.0",
    "feedparser>=6.0.11",
    "httplib2>=0.22.0",
]
